--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -56,6 +56,7 @@
 
     input[type="text"],
     input[type="email"],
+    input[type="number"],
     input[type="tel"] {
         border-radius: 0.5rem;
         padding: 0em 0.25rem 0em 0.25rem;
